tests/NormalTests/paczka1/small_fuzzy/23644196.err
Error in line 2: NI8 S386 28,3
Error in line 12: PDGgRH7FR S386 10,3
